
syntax = "proto3";


message HelloRequest {
	string name = 1;
    bytes data = 2;
    bool b = 3;

    message Foo {}
    Foo f = 2;
}

message HelloResponse {
	string message = 1;
}

service HelloWorld {
	rpc SayHello( HelloRequest ) returns ( HelloResponse ) {}
}
